# KONSPECTO-LLM

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
backend/: pyproject.toml  setup.cfg
backend/agent/: __init__.py  react_agent.py
backend/agent/tools/: search.py  video_processor.py
backend/app/: exceptions.py  logging_config.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: agent.py  search.py  transcribe.py  video.py
backend/app/config/: .env.example  service_account_key-example.json
backend/app/core/: config.py  logging_config.py
backend/app/models/: search.py  transcription.py
backend/app/services/: index_service.py  redis_service.py  vector_db.py
backend/app/services/llm/: llm_studio_client.py
backend/app/services/transcription/: base.py  whisper_model.py
backend/tests/: conftest.py  run_tests.sh  test_agent_endpoint.py  test_agent_search.py  test_main.py  test_search.py  test_transcribe_endpoint.py  test_transcription.py  test_video_api.py  test_video_processor.py
docker/backend/: Dockerfile
docker/frontend/: Dockerfile  nginx.conf
frontend/: .eslintrc.js  .prettierrc  babel.config.js  index.html  jest.config.js  jest.setup.js  package.json  tailwind.config.js  vite.config.js
frontend/__mocks__/: config.js  fileMock.js
frontend/src/: App.jsx  config.js  index.css  main.jsx
frontend/src/__tests__/: App.test.jsx  Chat.test.jsx  GoogleDocViewer.test.jsx  Search.test.jsx  Sidebar.test.jsx
frontend/src/components/: DownloadButton.jsx  ErrorMessage.jsx  GoogleDocViewer.jsx  Sidebar.jsx
frontend/src/context/: ChatContext.jsx
frontend/src/pages/: AgentInteraction.jsx  Chat.jsx  Search.jsx
frontend/src/utils/: youtubeUtils.js
md-files/: api-documentation.md  concept.md  development-rules.md  plan.md  project-architecture.md  sprint-1.md  sprint-2.md  sprints.md  useful_links.md
tests/: test_version.py
