[tool.poetry]
name = "konspecto-backend"
version = "0.1.0"
description = "Backend for KONSPECTO project"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
celery = "5.3.0"
redis = "^5.0.1"
pydantic = {extras = ["email"], version = "^1.10.7"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
llama-index = "~0.10"

[tool.poetry.group.dev.dependencies]
pytest = "7.3.1"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.0"
black = "23.1.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.2"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88