[tool.poetry]
name = "konspecto-backend"
version = "0.1.0"
description = "Backend for KONSPECTO project"
authors = ["Roman Neronov <roman.nieronov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = { extras = ["standard"], version = "^0.22.0" }
celery = "5.3.0"
redis = "^5.0.1"
pydantic = { extras = ["email"], version = "^2.9.2" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
llama-index = "0.12.5"
llama-index-core = "0.12.5"
llama-index-readers-google = "0.5.0"
torch = "2.5.1"
docx2txt = "0.8"
chromadb = "^0.5.18"
sentence-transformers = "3.3.1"
llama-index-storage-docstore-redis = "0.3.0"
llama-index-vector-stores-redis = "0.4.0"
pydantic-settings = "^2.6.1"
faster-whisper = "^1.0.3"
aiofiles = "^24.1.0"
opencv-python = "^4.10.0.84"
pillow = "^11.0.0"
imagehash = "^4.3.1"
python-docx = "^1.1.2"
pytubefix = "^8.5.3"
scikit-image = "^0.24.0"
fakeredis = "^2.26.1"
langchain-openai = "^0.2.10"
langchain = "^0.3.9"
langchain-community = "^0.3.8"
llama-index-embeddings-huggingface = "^0.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.3.1"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.0"
black = "23.1.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.2"
httpx = "^0.27.0"
docker = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
